--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   get: ^4.6.6
 
   # Networking
-  http: ^1.2.0
+  http: ^1.6.0
   socket_io_client: ^2.0.3+1
 
   # UI Components
@@ -60,6 +60,8 @@ dependencies:
   shimmer: ^3.0.0
   pull_to_refresh: ^2.0.0
   flutter_staggered_animations: ^1.1.1
+  curved_navigation_bar: ^1.0.6
+  html: ^0.15.6
 
 dev_dependencies:
   flutter_test:
